chore: document work and ignore secrets
Document delivered work and ensure secret files are ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ dist/
 coverage/
 .env
 .env.*
+*firebase*.json
+serviceAccount*.json
+*service-account*.json
+horizontalv2.json
+postdoctorkey.json
+firebasestuff.txt
 *.log
 vpspass.txt
 .DS_Store
