--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,8 +12,10 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^7.2.4",
     "@fastify/rate-limit": "^9.0.1",
+    "@sendgrid/mail": "^8.1.3",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
+    "firebase-admin": "^13.6.0",
     "pg": "^8.11.5",
     "stripe": "^15.7.0",
     "zod": "^3.23.8"
