--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "15.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "15.5.9",
+    "posthog-js": "^1.241.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "firebase": "^12.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
