--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "expo": "^51.0.0",
     "expo-status-bar": "~1.12.1",
-    "react": "18.3.1",
-    "react-native": "0.74.1"
+    "react": "18.2.0",
+    "react-native": "0.74.1",
+    "firebase": "^12.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
