--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "devDependencies": {
     "@playwright/test": "^1.58.0",
     "playwright": "^1.58.0"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "framer-motion": "^12.29.2",
+    "lucide-react": "^0.563.0"
   }
 }
