feat(compliance): add cookie banner, update pricing faq, and enable dynamic academy

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,11 +14,15 @@
     "@tailwindcss/typography": "^0.5.19",
     "firebase": "^12.2.1",
     "framer-motion": "^12.29.2",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.563.0",
     "next": "15.5.9",
     "posthog-js": "^1.241.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^10.1.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
