--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,6 +38,20 @@ services:
       JWT_SIGNING_KEY: ${JWT_SIGNING_KEY}
       STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
       STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
+      SMTP_HOST: ${SMTP_HOST}
+      SMTP_PORT: ${SMTP_PORT}
+      SMTP_SUPPORT_USER: ${SMTP_SUPPORT_USER}
+      SMTP_SUPPORT_PASS: ${SMTP_SUPPORT_PASS}
+      SMTP_SUPPORT_FROM: ${SMTP_SUPPORT_FROM}
+      SMTP_ALERTS_USER: ${SMTP_ALERTS_USER}
+      SMTP_ALERTS_PASS: ${SMTP_ALERTS_PASS}
+      SMTP_ALERTS_FROM: ${SMTP_ALERTS_FROM}
+      SMTP_MARKETING_USER: ${SMTP_MARKETING_USER}
+      SMTP_MARKETING_PASS: ${SMTP_MARKETING_PASS}
+      SMTP_MARKETING_FROM: ${SMTP_MARKETING_FROM}
+      SMTP_SECURITY_USER: ${SMTP_SECURITY_USER}
+      SMTP_SECURITY_PASS: ${SMTP_SECURITY_PASS}
+      SMTP_SECURITY_FROM: ${SMTP_SECURITY_FROM}
     volumes:
       - ./horizonsvcfirebase.json:/app/horizonsvcfirebase.json:ro
       - ./horizontalv2.json:/app/horizontalv2.json:ro
@@ -84,6 +98,8 @@ services:
       NEXT_PUBLIC_POSTHOG_KEY: ${NEXT_PUBLIC_POSTHOG_KEY}
       NEXT_PUBLIC_POSTHOG_HOST: ${NEXT_PUBLIC_POSTHOG_HOST}
       PUBLIC_SITE_URL: https://horizonsvc.com
+    volumes:
+      - ./content:/app/content
     ports:
       - "3000:3000"
     depends_on:
