--- a/services/api/package.json
+++ b/services/api/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
     "firebase-admin": "^13.6.0",
+    "nodemailer": "^7.0.12",
     "pg": "^8.11.5",
     "stripe": "^15.7.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.11.6",
     "tsx": "^4.15.0",
     "typescript": "^5.5.4"
