--- a/services/automation/package.json
+++ b/services/automation/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
-    "openai": "^6.16.0"
+    "node-cron": "^4.2.1",
+    "openai": "^6.16.0",
+    "slugify": "^1.6.6"
   }
 }
