--- a/services/signal-engine/package.json
+++ b/services/signal-engine/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@alpacahq/alpaca-trade-api": "^3.1.3",
     "dotenv": "^16.4.5",
     "pg": "^8.11.5",
     "zod": "^3.23.8"
